完成Vue3语法补充

--- a/Vue3/12.CompositionAPI.md
+++ b/Vue3/12.CompositionAPI.md
@@ -21,7 +21,7 @@
   - 比如都有 **methods 选项**，并且都定义了方法，那么 **它们都会生效**
   - 但是如果 **对象的 key 相同**，那么 **会取组件对象的键值对**
 
-![image-20220714103904663](E:\learn\lagouBigFront\md\Vue3\img\image-20220714103904663.png)
+![image-20220714103904663](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220714103904663.png)
 
 ```js
 // 进入页面
@@ -54,7 +54,7 @@ app.mixin({
 
 - 在开发中 extends 用的非常少，在 Vue2 中比较推荐大家使用 Mixin，而在 Vue3 中推荐使用 Composition API
 
-![image-20220714104410045](E:\learn\lagouBigFront\md\Vue3\img\image-20220714104410045.png)
+![image-20220714104410045](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220714104410045.png)
 
 ## Composition API
 
@@ -109,7 +109,7 @@ context：可以称之为是一个 SetupContext，它里面包含三个属性：
 
 - 因为对于一个定义的变量来说，默认情况下，Vue 并不会跟踪它的变化，来引起页面的响应式操作
 
-![image-20220725101850285](E:\learn\lagouBigFront\md\Vue3\img\image-20220725101850285.png)
+![image-20220725101850285](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220725101850285.png)
 
 ### setup 不可以使用 this
 
@@ -117,23 +117,23 @@ context：可以称之为是一个 SetupContext，它里面包含三个属性：
 - 并且在 setup 被调用之前，data、computed、methods 等都没有被解析
 - 所以无法在 setup 中获取 this
 
-![image-20220727105958669](E:\learn\lagouBigFront\md\Vue3\img\image-20220727105958669.png)
+![image-20220727105958669](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220727105958669.png)
 
 现在官方的解答
 
-![image-20220727110234105](E:\learn\lagouBigFront\md\Vue3\img\image-20220727110234105.png)
+![image-20220727110234105](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220727110234105.png)
 
 - `packages\runtime-core\src\renderer.ts`
 
   调用 createComponentInstance 创建组件实例
 
-  ![image-20220727111846879](E:\learn\lagouBigFront\md\Vue3\img\image-20220727111846879.png)
+  ![image-20220727111846879](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220727111846879.png)
 
 - `packages\runtime-core\src\component.ts`
 
   调用 setupComponent 初始化 component 内部的操作
 
-  ![image-20220727143157803](E:\learn\lagouBigFront\md\Vue3\img\image-20220727143157803.png)
+  ![image-20220727143157803](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220727143157803.png)
 
   调用 setupStatefulComponent 初始化有状态的组件
 
@@ -141,7 +141,7 @@ context：可以称之为是一个 SetupContext，它里面包含三个属性：
 
   通过 callWithErrorHandling 的函数执行 setup
 
-  ![image-20220727170106177](E:\learn\lagouBigFront\md\Vue3\img\image-20220727170106177.png)
+  ![image-20220727170106177](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220727170106177.png)
 
 由上可知，组件的 instance 肯定是在执行 setup 函数之前就创建出来的
 
@@ -643,7 +643,7 @@ watch(name, (newValue, oldValue) => {
 })
 ```
 
-![image-20220802154115346](E:\learn\lagouBigFront\md\Vue3\img\image-20220802154115346.png)
+![image-20220802154115346](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220802154115346.png)
 
 **侦听多个数据源**
 
@@ -693,7 +693,7 @@ onUnmounted(() => {
 })
 ```
 
-![image-20220802155319928](E:\learn\lagouBigFront\md\Vue3\img\image-20220802155319928.png)
+![image-20220802155319928](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220802155319928.png)
 
 ### provide inject
 
@@ -719,5 +719,293 @@ provide('counter', readonly(counter))
 import { inject } from 'vue'
 const name = inject('name')
 const counter = inject('counter')
+```
+
+### hooks
+
+**useCounter**
+
+```js
+import { ref, computed } from 'vue'
+
+export default function () {
+  const counter = ref(0)
+  const doubleCounter = computed(() => counter.value * 2)
+  const increment = () => counter.value++
+  const decrement = () => counter.value--
+  return {
+    counter,
+    doubleCounter,
+    increment,
+    decrement
+  }
+}
+```
+
+**useTitle**
+
+```js
+import { ref, watch } from 'vue'
+
+export default function (title = '默认的title') {
+  const titleRef = ref(title)
+  watch(
+    titleRef,
+    newValue => {
+      document.title = newValue
+    },
+    {
+      immediate: true
+    }
+  )
+  return titleRef
+}
+```
+
+**useScrollPosition**
+
+```js
+import { ref } from 'vue'
+
+export default function () {
+  const scrollX = ref(0)
+  const scrollY = ref(0)
+  document.addEventListener('scroll', () => {
+    scrollX.value = window.scrollX
+    scrollY.value = window.scrollY
+  })
+  return {
+    scrollX,
+    scrollY
+  }
+}
+```
+
+**useMousePosition**
+
+```js
+import { ref } from 'vue'
+
+export default function () {
+  const mouseX = ref(0)
+  const mouseY = ref(0)
+  window.addEventListener('mousemove', event => {
+    mouseX.value = event.pageX
+    mouseY.value = event.pageY
+  })
+  return {
+    mouseX,
+    mouseY
+  }
+}
+```
+
+**useLocalStorage**
+
+```js
+import { ref, watch } from 'vue'
+
+export default function (key, value) {
+  const data = ref(value)
+  if (value) {
+    window.localStorage.setItem(key, JSON.stringify(value))
+  } else {
+    data.value = JSON.parse(window.localStorage.getItem(key))
+  }
+  watch(data, newValue => {
+    window.localStorage.setItem(key, JSON.stringify(newValue))
+  })
+  return data
+}
+```
+
+### setup 顶层编写方式
+
+```html
+<h2>当前计数: {{ counter }}</h2>
+<button @click="increment">+1</button>
+<hello-world message="呵呵呵" @increment="getCounter"></hello-world>
+
+<script setup>
+import { ref } from 'vue'
+import HelloWorld from './HelloWorld.vue'
+const counter = ref(0)
+const increment = () => counter.value++
+const getCounter = payload => {
+  console.log(payload)
+}
+</script>
+```
+
+- `HelloWorld.vue`
+
+```html
+<h2>{{ message }}</h2>
+<button @click="emitEvent">发射事件</button>
+
+<script setup>
+import { defineProps, defineEmits } from 'vue'
+const props = defineProps({
+  message: {
+    type: String,
+    default: '哈哈哈'
+  }
+})
+const emit = defineEmits(['increment'])
+const emitEvent = () => {
+  emit('increment', '100000')
+}
+</script>
+```
+
+### h 函数
+
+Vue 推荐在绝大多数情况下使用模板来创建你的 HTML，有一些特殊场景，你需要 JavaScript 完全编程的能力，可以使用渲染函数，它比模板更接近编译器
+
+- Vue 在生成真实 DOM 之前，会将我们的节点转换成 VNode，而 VNode 组合在一起形成一颗树结构，就是虚拟 DOM（VDOM）
+- 事实上，我们之前编写的 template 中的 HTML 最终也是使用渲染函数生成对应的 VNode
+- 如果你想充分利用 JavaScript 的编程能力，我们可以自己来编写 createVNode 函数，生成对应的 VNode
+
+使用 `h()` 函数
+
+- `h()` 函数是一个用于创建 vnode 的一个函数
+- 其实更准确的命名是 `createVNode()` 函数，但是为了简便在 Vue 将指称为 `h -> hyperscript` 函数
+
+**h() 函数使用**
+
+它接收三个参数：
+
+- tag：HTML 标签名、组件、异步组件或函数式组件
+- props：与 attribute、prop 和事件相对应的对象
+- children：子 VNodes，使用 `h()` 函数构建
+
+![image-20220803143817401](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220803143817401.png)
+
+**注意事项：**
+
+- 如果没有 props，那么通常可以将 children 作为第二个参数传入
+- 如果会产生歧义，可以将 null 作为第二个参数传入，将 children 作为第三个参数传入
+
+```js
+import { ref, h } from 'vue'
+
+export default {
+  setup() {
+    const counter = ref(0)
+
+    return () => {
+      return h('div', { class: 'app' }, [
+        h('h2', null, `当前计数: ${counter.value}`),
+        h(
+          'button',
+          {
+            onClick: () => counter.value++
+          },
+          '+1'
+        ),
+        h(
+          'button',
+          {
+            onClick: () => counter.value--
+          },
+          '-1'
+        )
+      ])
+    }
+  }
+}
+```
+
+函数组件和插槽使用
+
+```js
+/* App.vue */
+import { h } from 'vue'
+import HelloWorld from './HelloWorld.vue'
+export default {
+  render() {
+    return h('div', null, [
+      h(HelloWorld, null, {
+        default: props => h('span', null, `app传入到HelloWorld的内容：${props.name}`)
+      })
+    ])
+  }
+}
+
+/* HelloWorld.vue */
+import { h } from 'vue'
+export default {
+  render() {
+    return h('div', null, [
+      h('h2', null, 'Hello World'),
+      this.$slots.default
+        ? this.$slots.default({ name: 'code' })
+        : h('span', null, '我是HelloWorld的插槽默认值')
+    ])
+  }
+}
+```
+
+### jsx
+
+如果我们希望在项目中使用 jsx，我们需要添加对 jsx 的支持：
+
+- jsx 我们通常会通过 Babel 来进行转换
+- React 编写的 jsx 就是通过 Babel 转换的
+- Vue 我们只需在 Babel 中配置对应的插件即可
+
+```bash
+npm install @vue/babel-plugin-jsx -D
+```
+
+在 babel.config.js 配置文件中配置插件
+
+```js
+module.exports = {
+  presets: [
+    '@vue/cli-plugin-babel/preset'
+  ],
+  plugins: [
+    '@vue/babel-plugin-jsx'
+  ]
+}
+```
+
+最新脚手架无需进行此配置
+
+```js
+/* App.vue */
+import HelloWorld from './HelloWorld.vue'
+export default {
+  data() {
+    return {
+      counter: 0
+    }
+  },
+  render() {
+    const increment = () => this.counter++
+    const decrement = () => this.counter--
+    return (
+      <div>
+        <h2>当前计数: {this.counter}</h2>
+        <button onClick={increment}>+1</button>
+        <button onClick={decrement}>-1</button>
+        <HelloWorld></HelloWorld>
+      </div>
+    )
+  }
+}
+
+/* HelloWorld.vue */
+export default {
+  render() {
+    return (
+      <div>
+        <h2>HelloWorld</h2>
+        {this.$slots.default ? this.$slots.default() : <span>哈哈哈</span>}
+      </div>
+    )
+  }
+}
 ```
 
