--- a/Vue3/14.Vue3源码.md
+++ b/Vue3/14.Vue3源码.md
@@ -531,6 +531,8 @@ function createApp(rootComponent) {
 
 ### mount 流程
 
+![image-20220815105448023](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220815105448023.png)
+
 `packages/runtime-core/src/renderer.ts`
 
 **patch 函数**
@@ -552,6 +554,152 @@ function createApp(rootComponent) {
 
 ![image-20220810141337640](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220810141337640.png)
 
-判断组件是否挂载，没有则挂载组件，有则更新组件
+`setupRenderEffect` 这里会调用 effet 函数（当数据发生变化时就会重新执行），函数里面判断组件是否挂载，没有则挂载组件，有则更新组件。第一次没有挂载会走挂载操作
 
-![image-20220810172604532](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220810172604532.png)
+![image-20220815102627313](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220815102627313.png)
+
+挂载操作会拿到组件 subTree，在调用 `patch` 方法
+
+![image-20220815103221789](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220815103221789.png)
+
+`patch` 方法会判断节点的类别，如果有根会直接调用 `processElement` 挂载元素，如果没有根会当成 Fragment 来处理
+
+![image-20220815103610369](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220815103610369.png)
+
+有根会调用 `mountElement` 挂载节点
+
+![image-20220815103759036](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220815103759036.png)
+
+`mountElement` 首先会调用 `hostCreateElement` 创建元素
+
+![image-20220815104005602](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220815104005602.png)
+
+如果里面有 children 会调用 `mountChildren` 挂载，最终会把 el 挂在到 container 上
+
+![image-20220815104307691](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220815104307691.png)
+
+### 组件的初始化
+
+![image-20220816085744114](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816085744114.png)
+
+`packages/runtime-core/src/component.ts`
+
+1. 处理 props 和 attrs
+
+   `instance.props`、`instance.attrs`
+
+2. 处理 slots
+
+   `instance.slots`
+
+3. 执行 setup
+
+   `instance.setupState = proxyRefs(result)`
+
+4. 编译 template
+
+   template -> render
+
+5. 对 vue2 的 options api 进行支持
+
+![image-20220816090422391](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816090422391.png)
+
+处理完 props、slots 会设置有状态的组件，调用 setup 函数，执行 `handleSetupResult`，
+
+![image-20220816091049474](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816091049474.png)
+
+setup 会把结果放到 setupState 里
+
+![image-20220816091218816](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816091218816.png)
+
+调用 compiler 函数
+
+![image-20220816092250624](E:\learn\lagouBigFront\md\Vue3\img\image-20220816092250624.png)
+
+对 vue2.x 的 options api 进行支持
+
+- `applyOptions` 里处理生命周期、methods、computed...
+
+![image-20220816092322882](E:\learn\lagouBigFront\md\Vue3\img\image-20220816092322882.png)
+
+### Compile 过程
+
+![image-20220816094017751](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816094017751.png)
+
+![image-20220816104831709](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816104831709.png)
+
+Scope Hoisting、Block Tree -> Vue3 性能优化
+
+- 在 Vue 中更新是组件级别的，在下一次更新时会重新执行 render 函数，如果在 render 函数里面写 createVNode，每次都会执行会浪费性能
+- 所以 Vue3 对此进行优化，对于不会改变的静态节点进行了作用域的提升
+- render 函数在 return 时进行了 openBlock 操作，它会创建一个数组，会将可能修改的元素放到这个数组中 `[divVNode, buttonVNode] -> dynamicChildren`，之后 diff 时只 diff 可能会修改的元素即可
+
+### 生命周期回调
+
+![image-20220816112556064](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816112556064.png)
+
+![image-20220816112855743](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816112855743.png)
+
+### template 中数据的使用顺序
+
+`packages/runtime-core/src/component.ts`
+
+![image-20220816141515107](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816141515107.png)
+
+这里解构 ctx、setupState 等变量
+
+![image-20220816142657015](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816142657015.png)
+
+那这里的 ctx 是什么呢？
+
+- `packages/runtime-core/src/componentOptions.ts`
+- methods、data、computed 等都放在 ctx 中
+
+setupState 是 setup 的返回结果
+
+![image-20220816142031574](E:\learn\lagouBigFront\md\Vue3\img\image-20220816142031574.png)
+
+最后通过一个 if 进行判断，取值优先级顺序如下：
+
+1. setup
+2. data
+3. props
+4. context
+
+![image-20220816142601505](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816142601505.png)
+
+Vue3 可以进行代码测试：
+
+```html
+<div id="app"></div>
+
+<script src="https://unpkg.com/vue@3"></script>
+<script>
+  const Son = {
+    template: `<div>{{message}}</div>`,
+    props: {
+      message: String
+    },
+    data() {
+      return {
+        message: 'data'
+      }
+    },
+    computed: {
+      message() {
+        return 'computed'
+      }
+    },
+    setup() {
+      const message = Vue.ref('setup')
+      return { message }
+    }
+  }
+
+  const app = Vue.createApp({
+    components: { Son },
+    template: `<Son message="props"></Son>`,
+  }).mount('#app')
+</script>
+```
+
