--- a/Vue3/16.Vuex.md
+++ b/Vue3/16.Vuex.md
@@ -324,23 +324,450 @@ export function useGetters(mapper) {
 
 更改 Vuex 的 store 中的状态的唯一方法是提交 mutation
 
+```js
+const store = createStore({
+  mutations: {
+    incrementN(state, payload) {
+      state.counter += payload.count
+    }
+  },
+}
+```
 
+我们在提交 mutation 的时候，会携带一些数据，这个时候我们可以使用参数：
 
+```html
+<button @click="$store.commit('incrementN', { count: 10 })">+10</button>
 
+<button @click="$store.commit({ type: 'incrementN', count: 10 } )">+10</button>
+```
 
+我们可以把名称抽成一个常量以防出错
 
+- 创建 `mutation-types.js` 文件
 
+```js
+export const INCREMENT_N = 'increment_n'
+```
 
+修改 store
 
+```js
+import { INCREMENT_N } from './mutation-types'
+const store = createStore({
+  mutations: {
+    [INCREMENT_N](state, payload) {
+      state.counter += payload.count
+    }
+  },
+}
+```
 
+直接使用即可
 
+```html
+<button @click="$store.commit(INCREMENT_N, { count: 10 })">+10</button>
 
+<script>
+import { INCREMENT_N } from './mutation-types'
+export default {
+  data() {
+    return {
+      INCREMENT_N
+    }
+  }
+}
+</script>
+```
 
+**mutations 辅助函数**
 
+```html
+<button @click="increment"> +1 </button>
+<button @click="decrement"> -1 </button>
+<button @click="increment_n({ count: 10 })"> +10 </button>
 
+<script>
+import { mapMutations } from 'vuex'
+import { INCREMENT_N } from './mutation-types'
+export default {
+  // options API 用法
+  methods: {
+    ...mapMutations(['increment', 'decrement', INCREMENT_N])
+  },
+  // composition API 用法
+  setup() {
+    const storeMutations = mapMutations(['increment', 'decrement', INCREMENT_N])
+    return {
+      ...storeMutations
+    }
+  }
+}
+</script>
+```
 
+### actions
 
+Action 类似于 mutation，不同在于：
 
+- Action 提交的是 mutation，而不是直接变更状态
+- Action 可以包含任意异步操作
+
+这里有一个非常重要的参数 context：
+
+- context 是一个和 store 实例均有相同方法和属性的 context 对象
+- 所以我们可以从其中获取到 commit 方法来提交一个 mutation，或者通过 `context.state` 和 `context.getters` 来获取 state 和 getters
+
+action 分发使用的是 store 上的 dispatch 函数
+
+```js
+export default {
+  methods: {
+    increment() {
+      // 可以携带参数
+      this.$store.dispatch('incrementAction', { count: 100 })
+    },
+    decrement() {
+      // 可以以对象形式分发
+      this.$store.dispatch({
+        type: 'decrementAction'
+      })
+    }
+  }
+}
+
+// store.js
+const store = createStore({
+  mutations: {
+    decrement(state) {
+      state.counter--
+    },
+    [INCREMENT_N](state, payload) {
+      state.counter += payload?.count
+    }
+  },
+  actions: {
+    incrementAction({ commit }, payload) {
+      commit(INCREMENT_N, payload)
+    },
+    decrementAction({ commit }) {
+      commit('decrement')
+    }
+  }
+})
+```
+
+**actions 的辅助函数**
+
+```js
+import { mapActions } from 'vuex'
+export default {
+  setup() {
+    const actions = mapActions(['incrementAction', 'decrementAction'])
+    const actions2 = mapActions({
+      add: 'incrementAction',
+      sub: 'decrementAction'
+    })
+    return {
+      ...actions,
+      ...actions2
+    }
+  }
+}
+```
+
+**actions 异步操作**
+
+Actions 通常是异步的，那么如何知道 action 什么时候结束呢？
+
+- 我们可以通过让 action 返回 Promise，在 Promise 的 then 中来处理完成后的操作
+
+```js
+import { onMounted } from 'vue'
+import { useStore } from 'vuex'
+export default {
+  setup() {
+    const store = useStore()
+
+    onMounted(() => {
+      const promise = store.dispatch('getHomeMultiData')
+      promise
+        .then(res => {
+          console.log(res)
+        })
+        .catch(err => {
+          console.log(err)
+        })
+    })
+  }
+}
+
+// store.js
+const store = createStore({
+  state() {
+    return {
+      banners: []
+    }
+  },
+  mutations: {
+    addBannerData(state, payload) {
+      state.banners = payload
+    }
+  },
+  actions: {
+    getHomeMultiData(context) {
+      return new Promise((resolve, reject) => {
+        axios
+          .get('http://123.207.32.32:8000/home/multidata')
+          .then(res => {
+            context.commit('addBannerData', res.data.data.banner.list)
+            resolve({ name: 'cat', age: 18 })
+          })
+          .catch(err => {
+            reject(err)
+          })
+      })
+    }
+  }
+})
+```
+
+### module
+
+由于使用单一状态树，应用的所有状态会集中到一个比较大的对象，当应用变得非常复杂时，store 对象就有可能变得相当臃肿
+
+- 为了解决以上问题，Vuex 允许我们将 store 分割成模块（module）
+- 每个模块拥有自己的 state、mutation、action、getter、甚至是嵌套子模块
+
+```js
+// modules/module-a.js
+const moduleA = {
+  state: () => ({ ... }),
+  mutations: { ... },
+  actions: { ... },
+  getters: { ... }
+}
+// modules/module-b.js
+const moduleB = {
+  state: () => ({ ... }),
+  mutations: { ... },
+  actions: { ... }
+}
+// index.js
+const store = createStore({
+  modules: {
+    a: moduleA,
+    b: moduleB
+  }
+})
+
+// 页面中直接使用
+this.$store.state.a // -> moduleA 的状态
+this.$store.state.b // -> moduleB 的状态
+```
+
+默认情况下，模块内部的 action 和 mutation 仍然是注册在 **全局的命名空间** 中的：
+
+- 这样使得多个模块能够对同一个 action 或 mutation 作出相应
+- Getter 同样也默认注册在全局命名空间
+
+如果我们希望模块具有更高的封装度和复用性，可以添加 `namespaced: true` 的方式使其称为带命名空间的模块：
+
+```js
+const moduleA = {
+  namespaced: true
+}
+```
+
+- 当模块被注册后，它的所有 getter、action 及 mutation 都会自动根据模块注册的路径调整命名
+
+```html
+<!-- state 在私有空间中 -->
+<h2>root:{{ $store.state.rootCounter }}</h2>
+<h2>home:{{ $store.state.home.homeCounter }}</h2>
+<h2>user:{{ $store.state.user.userCounter }}</h2>
+<!-- getters 默认在全局空间中 -->
+<h2>{{ $store.getters['home/doubleHomeCounter'] }}</h2>
+<button @click="homeIncrement">home+1</button>
+<button @click="homeIncrementAction">home+1</button>
+
+<script>
+export default {
+  methods: {
+    homeIncrement() {
+      this.$store.commit('home/increment')
+    },
+    homeIncrementAction() {
+      this.$store.dispatch('home/incrementAction')
+    }
+  }
+}
+</script>
+```
+
+getters 和 actions 还有其他参数
+
+```js
+export default {
+  // 有四个参数
+  getters: {
+    info(state, getters, rootState, rootGetters) {}
+  },
+  // 有六个参数
+  actions: {
+    changeName({ commit, dispatch, state, rootState, getters, rootGetters }) {}
+  }
+}
+```
+
+如果我们希望在 action 中修改 root 的 state，有如下方式：
+
+- commit 第三个参数传 `{ root: true }`
+
+```js
+// modules/home.js
+const homeModule = {
+  namespaced: true,
+  state() {
+    return {
+      homeCounter: 100
+    }
+  },
+  mutations: {
+    increment(state) {
+      state.homeCounter++
+    }
+  },
+  actions: {
+    incrementAction({ commit }) {
+      commit('increment')
+      commit('increment', null, { root: true })
+    }
+  }
+}
+
+// index.js
+const store = createStore({
+  state() {
+    return {
+      rootCounter: 100
+    }
+  },
+  mutations: {
+    increment(state) {
+      state.rootCounter++
+    }
+  }
+})
+```
+
+**module 的辅助函数**
+
+- 方式一：通过完整的模块空间名称来查找
+- 方式二：第一个参数传入模块空间名称，后面写上要使用的属性
+- 方式三：通过 `createNamespacedHelpers` 生成一个模板的辅助函数
+
+```js
+// 写法一:
+import { mapState, mapGetters, mapMutations, mapActions } from 'vuex'
+export default {
+  computed: {
+    ...mapState({
+      homeCounter: state => state.home.homeCounter
+    }),
+    ...mapGetters({
+      doubleHomeCounter: 'home/doubleHomeCounter'
+    })
+  },
+  methods: {
+    ...mapMutations({
+      increment: "home/increment"
+    }),
+    ...mapActions({
+      incrementAction: "home/incrementAction"
+    })
+  },
+}
+
+// 写法二:
+import { mapState, mapGetters, mapMutations, mapActions } from 'vuex'
+export default {
+  computed: {
+    ...mapState('home', ['homeCounter']),
+    ...mapGetters('home', ['doubleHomeCounter'])
+  },
+  methods: {
+    ...mapMutations('home', ['increment']),
+    ...mapActions('home', ['incrementAction'])
+  },
+}
+
+// 写法三:
+const { mapState, mapGetters, mapMutations, mapActions } = createNamespacedHelpers('home')
+export default {
+  computed: {
+    ...mapState(['homeCounter']),
+    ...mapGetters(['doubleHomeCounter'])
+  },
+  methods: {
+    ...mapMutations(['increment']),
+    ...mapActions(['incrementAction'])
+  }
+}
+```
+
+在组合式 API 中如何使用？
+
+```js
+import { useState, useGetters } from '../hooks'
+const { mapMutations, mapActions } = createNamespacedHelpers('home')
+export default {
+    const state = useState('home', ['homeCounter'])
+    const getters = useGetters('home', ['doubleHomeCounter'])
+    const mutations = mapMutations(['increment'])
+    const actions = mapActions(['incrementAction'])
+    return {
+      ...state,
+      ...getters,
+      ...mutations,
+      ...actions
+    }
+  }
+}
+```
+
+这里需要对之前封装的函数进行修改，也使用 `createNamespacedHelpers` 来对命名空间进行处理
+
+```js
+import { mapState, createNamespacedHelpers } from 'vuex'
+import { useMapper } from './useMapper'
+
+export function useState(moduleName, mapper) {
+  let mapperFn = mapState
+  if (typeof moduleName === 'string' && moduleName.length > 0) {
+    mapperFn = createNamespacedHelpers(moduleName).mapState
+  } else {
+    mapperFn = moduleName
+  }
+  return useMapper(mapper, mapperFn)
+}
+```
+
+```js
+import { computed } from 'vue'
+import { useStore } from 'vuex'
+
+export function useMapper(mapper, mapFn) {
+  const store = useStore()
+  const storeStateFns = mapFn(mapper)
+  const storeState = {}
+  Object.keys(storeStateFns).forEach(fnKey => {
+    const fn = storeStateFns[fnKey].bind({ $store: store })
+    storeState[fnKey] = computed(fn)
+  })
+  return storeState
+}
+```
 
 
 
@@ -553,4 +980,108 @@ export function useGetters(mapper) {
   ```html
   <h2>{{ $store.getters.totalPriceGreaterN(2) }}</h2>
   ```
+
+## nextTick
+
+将回调推迟到下一个 DOM 更新周期之后执行。在更改了一些数据以等待 DOM 更新后立即使用它
+
+比如我们有下面的需求：
+
+- 点击一个按钮，我们会修改在 h2 中显示的 message
+- message 被修改后，获取 h2 的高度
+
+实现上面的案例我们有三种方式：
+
+- 方式一：在点击按钮后立即获取到 h2 的高度（错误的做法）
+- 方式二：在 updated 生命周期函数中获取 h2 的高度（但是其他数据更新，也会执行该操作）
+- 方式三：使用 nextTick 函数
+
+```html
+<template>
+  <div>
+    <h2>{{ counter }}</h2>
+    <button @click="increment">+1</button>
+    <h2 class="title" ref="titleRef">{{ message }}</h2>
+    <button @click="addMessageContent">添加内容</button>
+  </div>
+</template>
+
+<script>
+import { ref, onUpdated, nextTick } from 'vue'
+
+export default {
+  setup() {
+    const message = ref('')
+    const titleRef = ref(null)
+    const counter = ref(0)
+    const addMessageContent = () => {
+      message.value += '哈哈哈哈哈哈哈哈哈哈'
+      nextTick(() => {
+        console.log(titleRef.value.offsetHeight)
+      })
+    }
+    const increment = () => {
+      for (let i = 0; i < 100; i++) {
+        counter.value++
+      }
+    }
+    onUpdated(() => {})
+
+    return {
+      message,
+      counter,
+      increment,
+      titleRef,
+      addMessageContent
+    }
+  }
+}
+</script>
+```
+
+Vue3 nextTick　这里去掉了很多判断，就是微任务了
+
+![image-20220831101335795](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220831101335795.png)
+
+Vue2 nextTick
+
+![image-20220831101438014](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220831101438014.png)
+
+## historyApiFallback
+
+`historyApiFallback` 是开发中一个非常常见的属性，它主要的作用是解决 SPA 页面在路由跳转之后，进行页面刷新时，返回 404 的错误
+
+boolean 值：默认是 false
+
+- 如果设置为 true，那么在刷新时，返回 404 错误时，会自动返回 index.html 的内容
+
+object 类型的值，可以配置 rewrites 属性：
+
+- 可以配置 from 来匹配路径，决定要跳转到哪一个页面
+
+事实上 devServer 中实现 `historyApiFallback` 功能是通过 `connect-history-api-fallback` 库的
+
+- 对于 Node.js/Express，可以考虑使用 [connect-history-api-fallback](https://github.com/bripkens/connect-history-api-fallback)
+
+```nginx
+location / {
+  try_files $uri $uri/ /index.html;
+}
+```
+
+![image-20220831104200368](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220831104200368.png)
+
+![image-20220831104459376](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220831104459376.png)
+
+无需动 node_modules，可以直接配置 `vue.config.js`
+
+```js
+module.exports = {
+  configureWebpack: {
+    devServer: {
+      // historyApiFallback: true
+    }
+  }
+}
+```
 
