增加低代码建设

--- a/Linux/5.数据处理.md
+++ b/Linux/5.数据处理.md
@@ -123,3 +123,8 @@ $ echo -n 你好 | wc -m
 - 字节：计量单位，表示数据量多少
 
 ## 35 jq
+
+> 下载：[jq](https://stedolan.github.io/jq/#)
+
+jq 是一款命令行 json 处理工具，类似 lodash 一样，它可以对 json 做各种各样的处理：`pick`、`get`、`filter`、`sort`、`map`
+
