--- a/Vue3/项目打包和自动化部署.md
+++ b/Vue3/项目打包和自动化部署.md
@@ -147,19 +147,33 @@ cat /var/lib/jenkins/secrets/initialAdminPassword
 
 **新建任务：**
 
-![新建任务](E:\learn\lagouBigFront\md\Vue3\img\0081Kckwgy1glc0uinjzej30pa0fet9z-166694517149242.jpg)
+![image-20221031160515414](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221031160515414.png)
 
 **任务名称输入**
 
-![image-20201204185613061](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/0081Kckwgy1glc0v225vaj30wl0hkn05.jpg)
+![image-20221031160628046](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221031160628046.png)
 
 **配置项目和保留策略：**
 
-![image-20210825160744119](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/008i3skNgy1gtt3l4fjm6j614p0d2dgl02.jpg)
+![image-20221031160822883](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221031160822883.png)
 
 **源码管理：**
 
-![image-20210825160818122](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/008i3skNgy1gtt3lpcvtgj614k0j8jsn02.jpg)
+```bash
+$ dnf install git
+```
+
+![image-20221031161031506](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221031161031506.png)
+
+添加认证可以先试试 `Username with password`
+
+![image-20221031161921397](E:\learn\lagouBigFront\md\Vue3\img\image-20221031161921397.png)
+
+- 如果密码不行需要使用 `GitLab 个人令牌`
+
+  记得勾选 `范围`
+
+![image-20221031161639876](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221031161639876.png)
 
 **构建触发器：**
 
@@ -168,26 +182,26 @@ cat /var/lib/jenkins/secrets/initialAdminPassword
 * 定时字符串从左往右分别是：分 时 日 月 周
 
 ```js
-#每半小时构建一次OR每半小时检查一次远程代码分支，有更新则构建
+# 每半小时构建一次OR每半小时检查一次远程代码分支，有更新则构建
 H/30 * * * *
 
-#每两小时构建一次OR每两小时检查一次远程代码分支，有更新则构建
+# 每两小时构建一次OR每两小时检查一次远程代码分支，有更新则构建
 H H/2 * * *
 
-#每天凌晨两点定时构建
+# 每天凌晨两点定时构建
 H 2 * * *
 
-#每月15号执行构建
+# 每月15号执行构建
 H H 15 * *
 
-#工作日，上午9点整执行
+# 工作日，上午9点整执行
 H 9 * * 1-5
 
-#每周1,3,5，从8:30开始，截止19:30，每4小时30分构建一次
+# 每周1、3、5，从8:30开始，截止19:30，每4小时30分构建一次
 H/30 8-20/4 * * 1,3,5
 ```
 
-![触发器](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/008i3skNgy1gtt419gw6tj614g0agmy402.jpg)
+![image-20221031165157975](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221031165157975.png)
 
 **构建环境：**
 
@@ -196,19 +210,19 @@ H/30 8-20/4 * * 1,3,5
 * 第一步：配置 Node 的环境
 * 第二步：安装 Node 的插件
 
-![image-20201204190055096](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/0081Kckwgy1glc0zyecd4j31ar0ecjuz.jpg)
+![image-20221031165523063](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221031165523063.png)
 
-第一步：配置 Node 的环境
+第一步：安装 Node 的插件
 
-![node环境](E:\learn\lagouBigFront\md\Vue3\img\008i3skNgy1gtt42elwduj614h0elwfq02.jpg)
+![image-20221031165737930](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221031165737930.png)
 
-第二步：安装 Node 的插件
+第二步：安装指定的 Node 版本
 
-* 这里因为我已经安装过了，所以没有搜索到
+![image-20221031170036357](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221031170036357.png)
 
-![image-20201204185949452](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/0081Kckwgy1glc0yta64bj30r907caam.jpg)
+第三步：配置 Node 环境
 
-
+![node环境](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/008i3skNgy1gtt42elwduj614h0elwfq02.jpg)
 
 构建执行的任务：
 
@@ -216,6 +230,8 @@ H/30 8-20/4 * * 1,3,5
 * 执行 `npm install` 安装项目的依赖
 * 移除原来 mall_cms 文件的所有内容
 * 将打包的 dist 文件夹内容移动到 mall_cms 文件夹
+
+![执行构建任务](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/008i3skNgy1gtt43sz933j614o0dy0tk02.jpg)
 
 ```bash
 pwd
@@ -235,23 +251,45 @@ rm -rf /root/mall_cms/*
 cp -rf ./dist/* /root/mall_cms/
 ```
 
-
-
-![执行构建任务](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/008i3skNgy1gtt43sz933j614o0dy0tk02.jpg)
-
 ### nginx 安装和配置
 
-们部署会使用nginx，所以需要先安装一下nginx：
+们部署会使用 nginx，所以需要先安装一下 nginx：
 
 ```bash
 $ dnf install nginx
 ```
 
-启动nginx：
+启动 nginx：
 
 ```bash
 $ systemctl start nginx
 $ systemctl status nginx
 $ systemctl enable nginx
+```
+
+**配置 nginx**
+
+通过 Linux 命令创建文件夹和文件：
+
+```bash
+$ mkdir /root/mall_cms
+$ cd /root/mall_cms
+$ touch index.html
+
+$ vi index.html
+```
+
+配置 nginx 访问目录：
+
+```nginx
+# user nginx;
+user root;
+
+server {
+  location / {
+    root /root/mal_cms;
+    index index.html;
+  }
+}
 ```
 
