增加部分vue3源码

--- a/Vue3/14-Vue3源码.md
+++ b/Vue3/14-Vue3源码.md
@@ -640,9 +640,15 @@ Scope Hoisting、Block Tree -> Vue3 性能优化
 
 ![image-20220816112855743](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816112855743.png)
 
+## v2 v3 对比
+
+> [https://v3-migration.vuejs.org/](https://v3-migration.vuejs.org/)
+
 ### template 中数据的使用顺序
 
-`packages/runtime-core/src/component.ts`
+**vue3**
+
+- `packages/runtime-core/src/component.ts`
 
 ![image-20220816141515107](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20220816141515107.png)
 
@@ -703,3 +709,24 @@ Vue3 可以进行代码测试：
 </script>
 ```
 
+**vue2**
+
+- `src/core/instance/state.ts`
+
+初始化顺序：`props`、`setup`、`methods`、`data`、`computed`、`watch`
+
+![image-20221104151050114](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221104151050114.png)
+
+### v-for v-if 优先级
+
+**vue2**
+
+- `src/compiler/codegen/index.ts`
+
+`v-for` 优先级比 `v-if` 高
+
+![image-20221104152043917](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221104152043917.png)
+
+**vue3**
+
+`v-if` 优先级比 `v-for` 高
