--- a/React/2.Jsx语法.md
+++ b/React/2.Jsx语法.md
@@ -1,4 +1,6 @@
-## 基础语法
+## JSX 语法解析
+
+### 基础语法
 
 **JSX 是什么**
 
@@ -23,9 +25,9 @@ React 认为**渲染逻辑**本质上与**其他 UI 逻辑**存在内在耦合
 
 **JSX 注释**
 
-![image-20221114171611975](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221114171611975.png)
+![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221114171611975.png)
 
-## 插入内容
+### 插入内容
 
 **JSX 嵌入变量作为子元素**
 
@@ -118,7 +120,7 @@ JSX嵌入表达式
 - 三元运算符
 - 执行一个函数
 
-## 绑定属性
+### 绑定属性
 
 - 比如元素都会有 title 属性
 - 比如 img 元素会有 src 属性
@@ -168,7 +170,7 @@ class App extends React.Component {
 }
 ```
 
-## 事件绑定
+### 事件绑定
 
 如果原生 DOM 原生有一个监听事件，我们可以如何操作呢？
 
@@ -287,7 +289,7 @@ class App extends React.Component {
 }
 ```
 
-## 条件渲染
+### 条件渲染
 
 某些情况下，界面的内容会根据不同的情况显示不同的内容，或者决定是否渲染某部分内容：
 
@@ -321,6 +323,9 @@ class App extends React.Component {
   render() {
     const { isReady, friend } = this.state
     // 1.条件判断方式一: 使用if进行条件判断
+    
+    
+    
     let showElement = null
     if (isReady) {
       showElement = <h2>准备开始比赛吧</h2>
@@ -341,6 +346,178 @@ class App extends React.Component {
         <div>{friend && <div>{friend.name + ' ' + friend.desc}</div>}</div>
       </div>
     )
+  }
+}
+```
+
+### 列表渲染
+
+在 React 中并没有像 Vue 模块语法中的 v-for 指令，而且需要我们通过 JavaScript 代码的方式组织数据，转成 JSX：
+
+- 很多从 Vue 转型到 React 的同学非常不习惯，认为 Vue 的方式更加的简洁明了
+- 但是 React 中的 JSX 正是因为和 JavaScript 无缝的衔接，让它可以更加的灵活
+- 另外我经常会提到 React 是真正可以提高我们编写代码能力的一种方式
+
+如何展示列表呢？
+
+- 在 React 中，展示列表最多的方式就是使用数组的 map 高阶函数
+
+很多时候我们在展示一个数组中的数据之前，需要先对它进行一些处理：
+
+- 比如过滤掉一些内容：filter 函数
+- 比如截取数组中的一部分内容：slice 函数
+
+![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221115104843157.png)
+
+这个警告是告诉我们需要在列表展示的 jsx 中添加一个 key
+
+- key 主要的作用是为了提高 diff 算法时的效率
+
+## JSX 深入
+
+### JSX 本质
+
+JSX 仅仅只是 `React.createElement(component, props, ...children)` 函数的语法糖
+
+- 所有 JSX 最终都会被转换成 React.createElement 的函数调用
+
+createElement 需要传递三个参数：
+
+- 参数一：type
+  - 当前 ReactElement的 类型
+  - 如果是标签元素，那么就使用字符串表示 div
+  - 如果是组件元素，那么就直接使用组件的名称
+- 参数二：config
+  - 所有 jsx 中的属性都在 config 中以对象的属性和值的形式存储
+  - 比如传入 className 作为元素的 class
+- 参数三：children
+  - 存放在标签中的内容，以 children 数组的方式进行存储；
+  - 当然，如果是多个元素呢？React 内部有对它们进行处理
+
+![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221115113610693.png)
+
+> 可以在 babel 的官网中快速查看转换的过程：[https://babeljs.io/repl/#?presets=react](https://babeljs.io/repl/#?presets=react)
+
+![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221115114113258.png)
+
+### 虚拟 DOM
+
+通过 `React.createElement` 最终创建出来一个 ReactElement 对象
+
+ReactElement 对象作用：
+
+- 原因是 React 利用 ReactElement 对象组成了一个 JavaScript 的对象树
+- JavaScript 的对象树就是虚拟 DOM（Virtual DOM）
+
+ReactElement 的树结构
+
+- ReactElement 最终形成的树结构就是 Virtual DOM
+
+![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221115114902172.png)
+
+### 声明式编程
+
+Virtual DOM 是一种编程理念。
+
+- 在这个理念中，UI 以一种理想化或者说虚拟化的方式保存在内存中，并且它是一个相对简单的 JavaScript 对象
+- 我们可以通过 ReactDOM.render 让虚拟 DOM 和真实 DOM 同步起来，这个过程中叫做协调（Reconciliation）
+
+这种编程的方式赋予了 React 声明式的 API：
+
+- 你只需要告诉 React 希望让 UI 是什么状态
+- React 来确保 DOM 和这些状态是匹配的
+- 你不需要直接进行 DOM 操作，就可以从手动更改 DOM、属性操作、事件处理中解放出来
+
+### 购物车案例
+
+```jsx
+class App extends React.Component {
+  constructor() {
+    super()
+    this.state = {
+      books: books
+    }
+  }
+
+  getTotalPrice() {
+    return this.state.books.reduce((acc, cur) => {
+      return acc + cur.count * cur.price
+    }, 0)
+  }
+
+  changeCount(index, count) {
+    const newBooks = [...this.state.books]
+    newBooks[index].count += count
+    this.setState({ books: newBooks })
+  }
+
+  removeItem(index) {
+    const newBooks = [...this.state.books]
+    newBooks.splice(index, 1)
+    this.setState({ books: newBooks })
+  }
+
+  renderBookEmpty() {
+    return (
+      <div>
+        <h2>购物车为空, 请添加书籍~</h2>
+      </div>
+    )
+  }
+
+  renderBookList() {
+    const { books } = this.state
+    const formatPrice = price => {
+      return '¥' + price.toFixed(2)
+    }
+
+    return (
+      <div>
+        <table>
+          <thead>
+            <tr>
+              <th>序号</th>
+              <th>书籍名称</th>
+              <th>出版日期</th>
+              <th>价格</th>
+              <th>购买数量</th>
+              <th>操作</th>
+            </tr>
+          </thead>
+          <tbody>
+            {books.map((item, index) => {
+              return (
+                <tr>
+                  <td>{index + 1}</td>
+                  <td>{item.name}</td>
+                  <td>{item.date}</td>
+                  <td>{formatPrice(item.price)}</td>
+                  <td>
+                    <button
+                      disabled={item.count <= 1}
+                      onClick={() => this.changeCount(index, -1)}
+                    >
+                      -1
+                    </button>
+                    {item.count}
+                    <button onClick={() => this.changeCount(index, +1)}>+1</button>
+                  </td>
+                  <td>
+                    <button onClick={() => this.removeItem(index)}>删除</button>
+                  </td>
+                </tr>
+              )
+            })}
+          </tbody>
+          <h2>总价格：{formatPrice(this.getTotalPrice())}</h2>
+        </table>
+      </div>
+    )
+  }
+
+  render() {
+    const { books } = this.state
+    return books.length ? this.renderBookList() : this.renderBookEmpty()
   }
 }
 ```
