完成脚手架

--- a/React/3.React脚手架.md
+++ b/React/3.React脚手架.md
@@ -1,6 +1,4 @@
-## 脚手架
-
-### 工程化
+## 工程化
 
 现代的前端项目已经越来越复杂了：
 
@@ -18,7 +16,7 @@
 
 总结：脚手架让项目从搭建到开发，再到部署，整个流程变得快速和便捷
 
-### 初始化项目
+## 初始化项目
 
 **前端脚手架**
 
@@ -52,12 +50,16 @@ PWA 解决哪些问题
 - 实现了**消息推送**
 - 等等一系列类似于 Native App 相关的功能
 
-### 脚手架的 webpack
+## 脚手架的 webpack
 
 - React脚手架默认是基于 webpack 来开发的
-- 但是，很奇怪：我们并没有在目录结构中看到任何 webpack 相关的内容？
-  - 原因是 React 脚手架将 webpack 相关的配置隐藏起来了（其实从 Vue CLI3 开始，也是进行了隐藏）
-- 如果我们希望看到 webpack 的配置信息，应该怎么来做呢？
-  - 我们可以执行一个 `package.json` 文件中的一个脚本：`"eject": "react-scripts eject"`
 
-![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221115153636221.png)
+- 但是，很奇怪：我们并没有在目录结构中看到任何 webpack 相关的内容？
+
+  - 原因是 React 脚手架将 webpack 相关的配置隐藏起来了（其实从 Vue CLI3 开始，也是进行了隐藏）
+
+  ![](https://gitee.com/lilyn/pic/raw/master/lagoulearn-img/image-20221115153636221.png)
+
+- 如果我们希望看到 webpack 的配置信息，应该怎么来做呢？
+
+  - 我们可以执行一个 `package.json` 文件中的一个脚本：`"eject": "react-scripts eject"`
